2011-11-11 Maxim
- FIX:UI.Vision: Saving the previous inundationItems container is done during removing or creation fills in the ElFigure editor
                 for the correct EnDo/ReDo functions work.

2011-11-10 Maxim
- FIX:UI.Vision: Unnecessary calls of the "shapeSave" function are removed when properties dialog is accepted in the primitive ElFigure
                 to optimize the performance and UnDo/ReDo functions.
- UI.Vision: UnDo/ReDo is done for the dynamic properties of the primitive ElFigure.
- FIX:UI.Vision: moveUpDown function is optimized and fixed for the primitive ElFigure.
- FIX:UI.Vision: falling of the system when trying to create the fill, having the 'Connections' button disabled, using the
                 'inundation1_2' function is fixed for the primitive ElFigure.
- UI.Vision: Appending of points for the single shape of Elfigure is moved form the 'MouseButtonPress' to the 'MouseMove' event
             for greater convenience.


2011-11-09 Roman
- !!!:FIX:Archive: Task for values archiving by periodic ~60s is changet to no signal SIGALRM terminate mode for prevent values
    archive-files of module Archive.FSArch break by incidentally function write() terminate.
    Going to add processing for result of all write() and read() functions of module Archive.FSArch to prevent it.
- FIX:Archive.FSArch: Size of value archive file update after truncate of fix file procedure is added.
- SYS: The option 'noSignal' is added to function taskDestroy() for no signal SIGALRM send to task.
- UI.Vision: Falgs store for developed widgets is changed to uint8_t type.
    Child attributes process into change rule "attr" is added.
    Rule's name process is added for group attributes change into one rule "attr".
- UI.Vision: Context record for widget atributes' value is moved to separated function and used also
    for record context after active atribute value change.


2011-11-08 Roman