@@ -1,7 +1,7 @@
 
 AC_PREREQ([2.50])
 
-AC_INIT([OpenSCADA],[0.7.1],[rom_as@oscada.org, rom_as@fromru.com])
+AC_INIT([OpenSCADA],[0.7.2],[rom_as@oscada.org, rom_as@fromru.com])
 AC_PREFIX_DEFAULT([/usr])
 oscd_LIBREVISION="1:0:0"
 oscd_modulpref="oscd_"
