@@ -5627,16 +5627,16 @@ void VCADiagram::makeTrendsPicture( SSess &ses )
 	int64_t	curTm, averTm = 0, averLstTm = 0;
 	for( int a_pos = aPosBeg; true; a_pos++ )
 	{
-	    curTm = vmin(aVend,vmax(aVbeg,trnds[i_t].val()[a_pos].tm));
 	    if( a_pos < (int)trnds[i_t].val().size() && !end_vl )
 	    {
+		curTm = vmin(aVend,vmax(aVbeg,trnds[i_t].val()[a_pos].tm));
 		curVl = trnds[i_t].val()[a_pos].val;
 		if( vsPerc && curVl != EVAL_REAL )
 		    curVl = vmin(100,vmax(0,100*(curVl-bordL)/(bordU-bordL)));
 		if( isnan(curVl) ) curVl = EVAL_REAL;
 		curPos = tArX+tArW*(curTm-tBeg)/(tPict-tBeg);
 	    }else curPos = 0;
-	    if( trnds[i_t].val()[a_pos].tm >= aVend )	end_vl = true;
+	    if(!curPos || trnds[i_t].val()[a_pos].tm >= aVend)	end_vl = true;
 	    //Square Average
 	    if( averPos == curPos )
 	    {
@@ -6227,11 +6227,11 @@ int64_t VCADiagram::TrendObj::valEnd()
 
 int VCADiagram::TrendObj::val( int64_t tm )
 {
-    int i_p = 0;
-    for( int d_win = vals.size()/2; d_win > 10; d_win/=2 )
-	if( tm < vals[i_p+d_win].tm )   i_p+=d_win;
-	    for( int i_p = 0; i_p < (int)vals.size(); i_p++ )
-		if( vals[i_p].tm >= tm ) return i_p;
+    unsigned i_p = 0;
+    for(unsigned d_win = vals.size()/2; d_win > 10; d_win/=2)
+	if(tm > vals[i_p+d_win].tm) i_p += d_win;
+    for( ; i_p < vals.size(); i_p++)
+	if(vals[i_p].tm >= tm) return i_p;
     return vals.size();
 }
 
